Letter spacing and caret fix

--- a/src/main/webapp/assets/styles/base/components/site-header-simple.less
+++ b/src/main/webapp/assets/styles/base/components/site-header-simple.less
@@ -112,6 +112,7 @@
     border: none;
     color: @color-text;
     height: 100%;
+    letter-spacing: 1px;
     padding-left: @space-double;
     text-align: left;
     text-transform: uppercase;
